added comments + started deauth